# youtube_agent_tools

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  cliff.toml  docker-compose.yml  mkdocs.yml  pyproject.toml  test_qdrant_search.py  test_query_e2e.py  test_semantic_search.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
config/: appsettings.dev.json  appsettings.json
docs/: 00-PROJECT-OVERVIEW.md  01-ARCHITECTURE.md  02-DOMAIN-MODELS.md  03-API-TOOLS.md  04-INFRASTRUCTURE.md  05-CONFIGURATION.md  06-DEPLOYMENT.md  07-IMPLEMENTATION-TASKS.md  AGENTIC_UPGRADES.md  DOCUMENTATION_PLAN.md  index.md
docs/api/: errors.md  index.md  rate-limiting.md
docs/api/mcp/: index.md  tools.md
docs/api/rest/: health.md  index.md  ingestion.md  management.md  query.md  sources.md
docs/application/: chunking-service.md  dtos.md  embedding-service.md  index.md  ingestion-service.md  pipelines.md  query-service.md  storage-service.md
docs/architecture/: data-flow.md  design-principles.md  hexagonal.md  index.md  system-overview.md  tech-stack.md
docs/configuration/: env-vars.md  hierarchy.md  index.md  json-files.md  k8s-secrets.md  pydantic.md
docs/contributing/: code-of-conduct.md  guide.md  index.md  pull-requests.md  roadmap.md
docs/deployment/: docker.md  gitops.md  index.md  kubernetes.md  monitoring.md
docs/development/: code-style.md  debugging.md  docker-compose.md  index.md  local-setup.md  pre-commit.md  testing.md
docs/domain/: chunks.md  citations.md  embeddings.md  exceptions.md  index.md  value-objects.md  video-metadata.md
docs/getting-started/: index.md  installation.md  quick-start.md  use-cases.md
docs/includes/: abbreviations.md
docs/infrastructure/: adding-providers.md  factory.md  index.md
docs/infrastructure/ai/: embeddings.md  index.md  llm.md  transcription.md
docs/infrastructure/blob/: cloud.md  index.md  minio.md
docs/infrastructure/documentdb/: index.md  interface.md  mongodb.md
docs/infrastructure/vectordb/: index.md  qdrant.md
docs/infrastructure/video/: chunker.md  frames.md  index.md  youtube.md
docs/reference/: config-reference.md  data-models.md  error-codes.md  glossary.md  implementation-status.md  index.md  python-api.md
docs/stylesheets/: extra.css
infrastructure/overlays/dev/: kustomization.yaml
infrastructure/overlays/prod/: kustomization.yaml
scripts/: clean_databases.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/mcp/: __init__.py  server.py  tools.py
src/api/middleware/: __init__.py  error_handler.py  logging.py
src/api/openapi/: __init__.py
src/api/openapi/routes/: __init__.py  health.py  ingestion.py  query.py  sources.py  videos.py
src/application/: __init__.py
src/application/dtos/: __init__.py  ingestion.py  query.py
src/application/services/: __init__.py  agentic_query.py  chunking.py  embedding.py  frame_description.py  ingestion.py  multimodal_message.py  query.py  query_decomposer.py  storage.py
src/commons/: __init__.py  model_capabilities.py
src/commons/infrastructure/: __init__.py
src/commons/infrastructure/blob/: __init__.py  base.py  minio_provider.py
src/commons/infrastructure/documentdb/: __init__.py  base.py  mongodb_provider.py
src/commons/infrastructure/vectordb/: __init__.py  base.py  qdrant_provider.py
src/commons/settings/: __init__.py  loader.py  models.py
src/commons/telemetry/: __init__.py  decorators.py  langfuse_client.py  logger.py
src/domain/: __init__.py  exceptions.py
src/domain/models/: __init__.py  chunk.py  citation.py  embedding.py  video.py
src/domain/value_objects/: __init__.py  chunking_config.py  youtube_video_id.py
src/infrastructure/: __init__.py  factory.py
src/infrastructure/embeddings/: __init__.py  base.py  clip_embeddings.py  openai_embeddings.py
src/infrastructure/llm/: __init__.py  anthropic_llm.py  base.py  openai_llm.py
src/infrastructure/transcription/: __init__.py  base.py  openai_whisper.py
src/infrastructure/video/: __init__.py  base.py  ffmpeg_chunker.py  ffmpeg_extractor.py
src/infrastructure/youtube/: __init__.py  base.py  downloader.py
tests/unit/: test_chunk_models.py  test_citation_models.py  test_domain_exceptions.py  test_embedding_model.py  test_settings.py  test_telemetry.py  test_value_objects.py  test_video_model.py
tests/unit/api/: test_mcp_tools.py  test_routes.py
tests/unit/application/: test_dtos.py  test_ingestion_service.py  test_query_service.py
tests/unit/infrastructure/: test_factory.py  test_mongodb_provider.py  test_youtube_downloader.py
