[project]
name = "youtube-rag-server"
version = "0.1.0"
description = "YouTube RAG Server - MCP tools for video content analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Infrastructure - Storage
    "minio>=7.2.0",
    "qdrant-client>=1.12.0",
    "motor>=3.6.0",  # async MongoDB driver
    # Infrastructure - YouTube
    "yt-dlp>=2024.11.0",
    # Infrastructure - AI Services
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    # Infrastructure - Video Processing
    "ffmpeg-python>=0.2.0",
    "pillow>=11.0.0",
    # Utilities
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",  # retry logic
    # MCP Server
    "mcp>=1.0.0",
    # Observability
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
    # Type stubs
    "types-aiofiles>=24.1.0",
    "types-pillow>=10.2.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-mermaid2-plugin>=1.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-glightbox>=0.4",  # Image lightbox
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "RUF022",   # __all__ not sorted (we group by category)
    "PLC0415",  # import not at top-level (needed for circular import avoidance)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "PLR2004"]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disable_error_code = ["no-untyped-call", "unused-ignore", "comparison-overlap", "misc"]

[[tool.mypy.overrides]]
module = "src.api.*"
disallow_untyped_decorators = false
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "minio.*",
    "qdrant_client.*",
    "motor.*",
    "bson.*",
    "yt_dlp.*",
    "ffmpeg.*",
    "openai.*",
    "anthropic.*",
    "httpx.*",
    "PIL.*",
    "fastapi.*",
    "starlette.*",
    "uvicorn.*",
    "mcp.*",
    "langfuse.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.commons.infrastructure.blob.*",
    "src.commons.infrastructure.vectordb.*",
    "src.infrastructure.llm.*",
    "src.infrastructure.transcription.*",
]
disable_error_code = ["arg-type", "misc"]

[[tool.mypy.overrides]]
module = "src.api.mcp.*"
disallow_untyped_decorators = false
disable_error_code = ["no-untyped-call"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14.7",
    "types-pyyaml>=6.0.12.20250915",
]
